Some colors and borders

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,7 +6,9 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "dev": "TAILWIND_MODE=watch postcss -i tailwind.css -o build.css --watch",
+    "build": "postcss -i tailwind.css -o build.css --minify"
   },
   "private": true,
   "dependencies": {
@@ -18,8 +20,8 @@
     "@angular/platform-browser": "~12.2.0",
     "@angular/platform-browser-dynamic": "~12.2.0",
     "@angular/router": "~12.2.0",
+    "@tailwindcss/custom-forms": "^0.2.1",
     "autoprefixer": "^10.3.6",
-    "postcss": "^8.3.8",
     "rxjs": "~6.6.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
@@ -28,6 +30,7 @@
     "@angular-devkit/build-angular": "~12.2.4",
     "@angular/cli": "~12.2.4",
     "@angular/compiler-cli": "~12.2.0",
+    "@tailwindcss/jit": "^0.1.18",
     "@types/jasmine": "~3.8.0",
     "@types/node": "^12.11.1",
     "jasmine-core": "~3.8.0",
@@ -36,7 +39,8 @@
     "karma-coverage": "~2.0.3",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "~1.7.0",
-    "tailwindcss": "^2.2.16",
+    "postcss": "^8.3.11",
+    "tailwindcss": "^2.2.17",
     "typescript": "~4.3.5"
   }
 }
